backend/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: { { .Values.frontend.name } }
  labels:
    app: { { .Values.frontend.name } }
spec:
  replicas: { { .Values.frontend.replicas } }
  selector:
    matchLabels:
      app: { { .Values.frontend.name } }
  template:
    metadata:
      labels:
        app: { { .Values.frontend.name } }
    spec:
      containers:
        - name: { { .Values.frontend.name } }
          image: { { .Values.frontend.image } }
          imagePullPolicy: { { .Values.frontend.imagePullPolicy } }
          ports:
            - containerPort: 80
