backend/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: { { .Values.postgres.name } }
  labels:
    app: { { .Values.postgres.name } }
spec:
  replicas: { { .Values.postgres.replicas } }
  selector:
    matchLabels:
      app: { { .Values.postgres.name } }
  template:
    metadata:
      labels:
        app: { { .Values.postgres.name } }
    spec:
      containers:
        - name: postgres
          image: { { .Values.postgres.image } }
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          emptyDir: {}
