backend/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Values.frontend.serviceName } }
spec:
  selector:
    app: { { .Values.frontend.name } }
  ports:
    - port: 80
      targetPort: 80
  type: { { .Values.frontend.serviceType } }
