backend/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Values.postgres.serviceName } }
spec:
  selector:
    app: { { .Values.postgres.name } }
  ports:
    - port: 5432
      targetPort: 5432
