backend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "my-backend.fullname" . } }
  labels:
    app: { { include "my-backend.name" . } }
spec:
  type: { { .Values.service.type } }
  selector:
    app: { { include "my-backend.name" . } }
  ports:
    - port: { { .Values.service.port } }
      targetPort: 8080
