backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { .Values.ingress.name } }
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: { { .Values.ingress.host } }
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: { { .Values.frontend.serviceName } }
                port:
                  number: 80
